pre load cover change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2562,7 +2562,7 @@ url("images/stress_man.jpg");
 
 #main > section.one {
 
-    background-color: #e9000a;
+    background-color: #0b0704;
     background-image: url("../../images/cover.jpg");
 }
 
